classDiagram
    class PlatformRules {
        <<module: services/platform_rules.py>>
        +PLATFORM_RULES: dict
        +Platform : Enum(xiaohongshu, wechat)
        +validate_script(platform, title, body, tags) list~str~
        +count_title(title, platform) dict
    }

    class ScriptGenerateRequest {
        <<Pydantic>>
        +house_id: int
        +template_style: str
        +platform: str  // 新增必填
        +validate_platform()  // 校验枚举
    }

    class ScriptResponse {
        <<Pydantic>>
        +id: int
        +house_id: int
        +title: str
        +body: str
        +tags: list
        +highlights: list
        +platform: Optional~str~
        +template_style: Optional~str~
        +created_at: datetime
    }

    class Script {
        <<ORM: models.py>>
        +id: int
        +house_id: int
        +title: str
        +body: str
        +tags: str(JSON)
        +highlights: str(JSON)
        +platform: Optional~str~  // 复用，无需加列
        +template_style: Optional~str~
    }

    class AIService {
        +generate_script(house_id, template_style, platform) dict
        -_build_prompt(house, template_style, platform) str
        -_call_deepseek(prompt) str
        -_parse_response(resp) dict
    }

    class ScriptRouter {
        +generate_script(req) ScriptResponse
        +get_script(id) ScriptResponse
        +update_script(id, req) ScriptResponse
    }

    class WechatService {
        +create_draft(...)
        -_truncate_title_by_bytes(title) str  // 最后防线
    }

    class XhsService {
        +publish_note(...)
    }

    ScriptRouter ..> AIService : 调用生成
    ScriptRouter ..> Script : 持久化/读取
    ScriptRouter ..> PlatformRules : 落库前校验
    AIService ..> PlatformRules : 读取约束注入提示词
    WechatService ..> PlatformRules : 引用标题/摘要/图片常量
    XhsService ..> PlatformRules : 引用标题常量
    ScriptResponse .. Script : ORM→DTO 映射
    ScriptGenerateRequest ..> PlatformRules : 校验 platform 枚举
